@@ -1,6 +1,7 @@
 PostGIS 1.0.5CVS
 	- New "Reporting Bugs" chapter in manual
 	- Segfault fix in shp2pgsql (utf8 encoding)
+	- Fixed computation of null values fraction in analyzer
 
 PostGIS 1.0.4
 2005/09/09
